tests/baselines/reference/accessInstanceMemberFromStaticMethod01.errors.txt
tests/cases/compiler/accessInstanceMemberFromStaticMethod01.ts(5,17): error TS2662: Cannot find name 'foo'. Did you mean the static member 'C.foo'?


==== tests/cases/compiler/accessInstanceMemberFromStaticMethod01.ts (1 errors) ====
    class C {
        static foo: string;
    
        bar() {
            let k = foo;
                    ~~~
!!! error TS2662: Cannot find name 'foo'. Did you mean the static member 'C.foo'?
        }
    }